add new Project in js

--- a/JavaScript/Demo Tests/index.html
+++ b/JavaScript/Demo Tests/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <!-- <div id="exC" class="carousel slide carousel-fade" data-bs-bs-ride="carousel">
+    <div id="exC" class="carousel slide carousel-fade" data-bs-bs-ride="carousel">
         <ul class="carousel-indicators">
             <li data-bs-bs-target="#exC" data-bs-bs-slide-to="0" class="active"></li>
             <li data-bs-bs-target="#exC" data-bs-bs-slide-to="1"></li>
@@ -131,7 +131,7 @@
             <li data-color="grey"></li>
         </ul>
     </div>
-    <div class="main"></div> -->
+    <div class="main"></div>
 
     <div class="scroll"></div>
     <script src="main.js" type="module"></script>
