--- a/JavaScript/CRUD Application/index.html
+++ b/JavaScript/CRUD Application/index.html
@@ -7,14 +7,14 @@
     <link rel="shortcut icon" href="#" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/js/bootstrap.min.js">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/js/bootstrap.min.js"> -->
     <title>Document</title>
 </head>
 
 <body>
-   <div class="container bg-primary mt-3 p-5 text-light">
+    <!-- <div class="container bg-primary mt-3 p-5 text-light">
     <label for="">Product Name</label>
     <input type="text" class="form-control">
     <label for="">Product Price</label>
@@ -43,7 +43,7 @@
         </tbody>
     </table>
    </div>
-    <script src="./main.js"></script>
+    <script src="./main.js"></script> -->
 </body>
 
 </html>
